--- a/Client/Core/Core.csproj
+++ b/Client/Core/Core.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\Utilities\Cryptography\Cryptography.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Slacek.Client.Core</RootNamespace>
